...
                            strokeWidth: 2,
                            valueColor:
                                AlwaysStoppedAnimation<Color>(Colors.white),
                          ),
                        )
                      : const Text(
                          'تحقق',
                          style: TextStyle(fontSize: 16),
                        ),
                );
              },
            ),

...
